smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/mixins/invalid-mixins-on-string.smithy
// Parse error at line 5, column 21 near ` X`: Unexpected shape type: with
$version: "2"
namespace com.foo

string MyString with X
